--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@headlessui/react": "^1.7.7",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.2",
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
     "mongoose": "^6.8.1",
