--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "next": "latest",
     "next-auth": "^4.18.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-leaflet": "^4.2.0"
+    "react-dom": "18.2.0"
+    
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.0",
+    
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
