--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
     "mongoose": "^6.8.1",
-    "next": "latest",
+    "next": "^13.4.9",
     "next-auth": "^4.18.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
-    
   },
   "devDependencies": {
-    
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
